chore(new) wonder points modules apis updated.
